--- a/FashionBlog.html
+++ b/FashionBlog.html
@@ -24,16 +24,16 @@
             excited! </p>
         <h2> Dressing for the Shows </h2>
         <img src="https://raw.githubusercontent.com/cbatuic/fashion-blog/main/image-three.jpeg">
-        <p> Always be true to your own sense of style, if you don’t you’ll be uncomfortable the whole time and it will show. Remember, NYFW is
+        <p> Always be true to your own sense of style — if you don’t you’ll be uncomfortable the whole time and it will show. Remember, NYFW is
             about expressing yourself and taking in what the designers have chosen to express through their
-            new lines. Also it’s important to wear shoes you’ll be comfortable in all day. Obviously, you want to
+            new lines. Also, it’s important to wear shoes you’ll be comfortable in all day. Obviously, you want to
             look good, but you’ll be on your feet all day long, so be prepared. </p>
         <h4> Related Content </h4>
         <ul>
             <li> How To Style Boyfriend Jeans </li>
             <li> When Print Is Too Much </li>
             <li> The Overalls Trend </li>
-            <li> Fall’s It Colo: Blush </li>
+            <li> Fall’s It Color: Blush </li>
         </ul>
     </body>
     <div id='contact'>
