--- a/FashionBlog.html
+++ b/FashionBlog.html
@@ -24,7 +24,7 @@
             excited! </p>
         <h2> Dressing for the Shows </h2>
         <img src="https://raw.githubusercontent.com/cbatuic/fashion-blog/main/image-three.jpeg">
-        <p> Always be true to your own sense of style — if you don’t you’ll be uncomfortable the whole time and it will show. Remember, NYFW is
+        <p> Always be true to your own sense of style. If you don’t, you’ll be uncomfortable the whole time and it will show. Remember, NYFW is
             about expressing yourself and taking in what the designers have chosen to express through their
             new lines. Also, it’s important to wear shoes you’ll be comfortable in all day. Obviously, you want to
             look good, but you’ll be on your feet all day long, so be prepared. </p>
