--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <p id="creator"> by Ashley Rianna L. Morales </p>
         <div class="button-container">
-            <button type="button" id="webdev-button">Web Development</button>
-            <button type="button" id="about-button">About Me</button>
+            <a href="https://ashleyriannamorales.github.io/AshPortfolio.github.io/WebDevelopment.html"><button type="button" id="webdev-button">Web Development</button></a>
+            <a href="https://ashleyriannamorales.github.io/AshPortfolio.github.io/AboutMe.html"><button type="button" id="webdev-button">About Me</button></a>
         </div>
     </div>
     <img src="https://i.ibb.co/tQH1ChF/Web-Dev-icon2.png">
